--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,9 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI,
+  Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+  sans-serif;
 }
 
 html,
@@ -9,10 +12,6 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
-body {
-}
-
 a {
   color: inherit;
   text-decoration: none;
