--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,10 @@
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
   'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
   'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+
+  --bg-light: #F1EDE9;
+  --bg-dark: #191D20;
+  --primary-color: #FF8EC6;
 }
 
 //@media (prefers-color-scheme: dark) {
