--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -33,6 +33,22 @@ textarea {
   box-shadow: inset 0 0 0 1px transparent;
 }
 
+.ReadingmoodNotification {
+  .Toastify__toast {
+    background-color: #000000;
+    color: white;
+    font-size: 14px;
+  }
+
+  .Toastify__close-button {
+    color: white;
+  }
+
+  .Toastify__progress-bar--error {
+    background-color: red;
+  }
+}
+
 /*@media (prefers-color-scheme: dark) {*/
 /*  html {*/
 /*    color-scheme: dark;*/
