--- a/src/components/songsList/songsList.module.scss
+++ b/src/components/songsList/songsList.module.scss
@@ -14,7 +14,7 @@
 }
 
 .song {
-  padding: 16px 20px;
+  padding: 10px 20px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.2);
   cursor: pointer;
@@ -26,9 +26,10 @@
 }
 
 .title {
-  margin-bottom: 5px;
+  margin-bottom: 3px;
 }
 
 .artist {
-  font-size: 14px;
+  font-size: 13px;
+  opacity: .5;
 }
