--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -44,10 +44,23 @@
 .title {
   font-size: 3rem;
   margin-bottom: 50px;
+  position: relative;
 
   @include breakpoint(mobile) {
     font-size: 2rem;
     margin-bottom: 24px;
+  }
+
+  &:before {
+    content: "";
+    background: url("/star.png");
+    background-size: contain;
+    transform: rotate(30deg);
+    left: -45px;
+    top: -40px;
+    position: absolute;
+    width: 40px;
+    height: 40px;
   }
 }
 
