Add description to song item

--- a/src/components/songsList/songsList.module.scss
+++ b/src/components/songsList/songsList.module.scss
@@ -29,3 +29,14 @@
   font-size: 13px;
   opacity: .5;
 }
+
+.why {
+  margin-top: 15px;
+  font-size: 14px;
+}
+
+.whyText {
+  margin-top: 5px;
+  font-size: 14px;
+  opacity: .5;
+}
